@@ -134,7 +134,7 @@ Poland on 16-17 June 2011;
 
 <li><p class="in-list">Easy intuitive interface (now in French,
   Italian, Spanish, Polish, German, Basque, Portuguese, Russian, Turkish,
-  Czech, Traditional Chinese and Albanian as well as English)</p></li>
+  Czech, Traditional Chinese, Albanian and Greek as well as English)</p></li>
 
 <li><p class="in-list">A wide variety of estimators: least squares, maximum likelihood,
 GMM; single-equation and system methods</p></li>
@@ -365,7 +365,8 @@ and reporting on gretl's numerical accuracy.
 <p>Many thanks to Ignacio Díaz-Emparanza, Susan Orbe, Michel Robitaille, Florent 
 Bresson, Cristian Rigamonti, Tadeusz and Pawel Kufel, Markus Hahn, Sven 
 Schreiber, Hélio Guilherme, Henrique Andrade, Alexander Gedranovich, Talha Yalta,
-Y. N. Yang, Pavla Nikolovova, Jan Hanousek and Artur Bala for their work in 
+Y. N. Yang, Pavla Nikolovova, Jan Hanousek, Artur Bala, 
+Manolis Tzagarakis and Ioannis Venetis for their work in 
 translating gretl.
 </p>
 
